--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/swiper": "^6.0.0",
     "next": "14.0.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
